fix vertical alignment of title

--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -46,13 +46,13 @@ header {
 
   .site-title {
     text-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+    margin: $globalPadding * 5 0 0;
     font-family: "angelowregular";
     max-width: $maxWidth;
     text-align: center;
     font-size: 23vw;
     z-index: 3;
     padding: 0;
-    margin: 0;
 
     a {
       display: block;
